fix(css): Show 1st place above 2nd on mobile podium
On mobile the podium stacks vertically following HTML order,
which placed the 2nd-place element above 1st. Setting
order: -1 on .podium-place.first ensures the champion
always appears on top.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1365,6 +1365,8 @@ h1, h2, h3 {
     max-width: 200px;
   }
 
+  .podium-place.first { order: -1; }
+
   .podium-pillar {
     height: 50px !important;
   }
